# mcp-checkpoint

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: bug_report.yml
demo-mcp-server/: README.md  demo_baseline.json  demo_config.json  demo_server.py
src/mcp_armor/: baseline.py  cli.py  config_validator.py  run_checks.py  scanner.py  security_utils.py
src/mcp_armor/scan_checks/: __init__.py  command_injection.py  cross_server_tool_shadowing.py  hardcoded_secrets.py  prompt_injection.py
src/mcp_checkpoint/: __init__.py  cli.py  connector.py  run_checks.py  scanner.py  security_utils.py
src/mcp_checkpoint/scan_checks/: baseline_deviation.py  command_injection.py  cross_server_tool_shadowing.py  excessive_tool_permissions.py  hardcoded_secrets.py  prompt_injection.py  tool_name_ambiguity.py
